--- a/CodingOnCountry/wwwroot/css/style.css
+++ b/CodingOnCountry/wwwroot/css/style.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Schoolbell&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Caveat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
@@ -26,7 +31,7 @@
 body {
     margin: 0;
     padding: 0;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Roboto Mono', monospace;
     text-align: center;
     margin: 0;
     width: 100vw;
@@ -46,6 +51,7 @@ h4 {
     font-size: 50pt;
     color: var(--sub-colour-dark);
     font-weight: 500;
+    font-family: 'Schoolbell', cursive;
 }
 
 h2 {
@@ -55,9 +61,12 @@ h2 {
 
 h3,
 h4 {
-    font-size: 25pt;
+    font-size: 35pt;
     margin-bottom: 25px;
+    
 }
+
+
 
 a {
     transition: all .5s;
@@ -231,8 +240,7 @@ footer {
     background-repeat: no-repeat;
     background-size: cover;
     position: relative;
-    margin-top: 0;
-    margin-bottom: 70pt;
+    
 }
 
 
@@ -250,13 +258,14 @@ footer {
 
 .heroContent h1 {
     color: var(--main-colour-light);
-    font-size: 50pt;
+    font-size: 70pt;
 }
 
 .heroContent p {
     font-size: 20px;
     font-weight: 400;
     margin: 40px 0;
+    
 }
 
 
@@ -268,15 +277,16 @@ footer {
 #home-info {
     display: flex;
     width: 100%;
-    height: 70vh;
+    min-height: calc(100vh - 440px) ;
     text-anchor: middle;
     flex-wrap: wrap;
-    padding-top: 100px;
+    padding: 200px 0;
+    
 }
 
 #home-video {
     width: 45%;
-    height: 45%;
+    height: 50vh;
     margin: 0;
     margin-left: 5%;
 }
@@ -358,7 +368,7 @@ footer {
 }
 
 .campContent h3 {
-    font-size: 16pt;
+    font-size: 20pt;
     font-weight: 500;
     margin: 0;
     color: var(--main-colour-light);
@@ -371,6 +381,9 @@ footer {
     font-weight: 600;
     font-weight: 300;
     color: var(--main-colour-light);
+    font-size: 10pt;
+    font-family: 'Roboto Mono', monospace;
+
 }
 
 .campContent a {
@@ -403,6 +416,7 @@ footer {
 
 .campHeader h2 {
     margin-right: 30px;
+    
 }
 
 .minorHeader {
@@ -552,7 +566,7 @@ footer {
 }
 
 .staticGallery {
-    width: calc(50vw - 200px);
+    width: calc(50% - 200px);
     height: 40vw;
     max-height: 600px;
     margin: 20px 0px 20px 100px;
@@ -822,8 +836,14 @@ main *
     .campContent {
         bottom: 0;
     }
+
+    #home-info {
+        padding: 70px 0;
+    }
+
     #home-video {
         width: 87%;
+        margin-bottom: 50px;
     }
     #home-video-info {
         width: 80%;
@@ -918,5 +938,9 @@ main *
     }
     .fbGallery {
         margin: 0;
+    }
+
+    .heroContent h1 {
+        font-size: 50pt;
     }
 }
