Makes top-menu navigation fixed
Makes the top-menu navigation bar fixed to the top of the screen.

--- a/coding-on-country/app/public/wp-content/themes/myTheme/css/main.css
+++ b/coding-on-country/app/public/wp-content/themes/myTheme/css/main.css
@@ -20,6 +20,13 @@ footer p {
   box-shadow: 0 0.25rem 0.75rem rgba(0, 0, 0, 0.05);
 }
 
+/* Navbar styling */
 .decnav {
   list-style: none !important;
+}
+
+/* Show it is fixed to the top */
+body {
+  min-height: 75rem;
+  padding-top: 4.5rem;
 }
