--- a/coding-on-country/app/public/wp-content/themes/myTheme/css/main.css
+++ b/coding-on-country/app/public/wp-content/themes/myTheme/css/main.css
@@ -112,7 +112,8 @@ body {
   padding: 5px;
   background-color: rgba(255,255,255,0.7);
   width: 100%;
-  min-height: 100%;
+  height: 100%;
+  overflow: hidden;
 }
 
 .aPostText:hover {
@@ -132,7 +133,7 @@ body {
 }
 
 .postThumb {
-  min-width: 100%;
-  min-height: 100%;
-  
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
