--- a/coding-on-country/app/public/wp-content/themes/myTheme/css/main.css
+++ b/coding-on-country/app/public/wp-content/themes/myTheme/css/main.css
@@ -33,41 +33,36 @@ body {
   padding-top: 4.5rem;
 }
 
-
-.container{
-  padding:30px;
+.container {
+  padding: 30px;
   margin: 0 auto;
 
   width: 100vw;
   background-color: rgba(255, 255, 255, 0.7);
-
 }
 
 .single-page-format {
   min-height: 100vh;
   width: 100%;
   margin: 20px 0;
-
 }
 
 .camp-section {
   min-height: 100vh;
-
 }
 
-.collapse , .collapsing {
+.collapse,
+.collapsing {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
 
-
   width: 100vw;
 }
 
-
-
-.collapse a , .collapsing a {
-  color: white ;
+.collapse a,
+.collapsing a {
+  color: white;
   padding: 10px 20px;
   margin: 10;
 }
@@ -78,7 +73,7 @@ body {
 
 .collapse a:hover {
   text-decoration: none;
-  color: grey ;
+  color: grey;
   cursor: pointer;
 }
 
@@ -89,35 +84,34 @@ body {
 
   display: flex;
   align-items: center;
-
 }
 
 .adminPost {
   width: 24%;
   height: 90%;
   margin: 0 1%;
-  background:  url("../images/email-pattern.png") ;
+  background: url("../images/email-pattern.png");
   position: relative;
   box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.2);
 }
 
-.aPostText , .postThumb{
+.aPostText,
+.postThumb {
   position: absolute;
   top: 0;
   left: 0;
-  
 }
 
 .aPostText {
   padding: 5px;
-  background-color: rgba(255,255,255,0.7);
+  background-color: rgba(255, 255, 255, 0.7);
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
 
 .aPostText:hover {
-  background-color: rgba(255,255,255,0.3);
+  background-color: rgba(255, 255, 255, 0.3);
 }
 
 .adminPost a {
@@ -125,7 +119,7 @@ body {
 }
 
 .adminPost a:hover {
-  color: rgba(100, 100, 100,0.5);
+  color: rgba(100, 100, 100, 0.5);
 }
 
 .adminPost p {
@@ -136,4 +130,45 @@ body {
   width: 100%;
   height: 100%;
   object-fit: cover;
+}
+
+/* 
+*
+* Commenting styling 
+*
+*/
+#respond {
+  background: #fbfbfb;
+  padding: 0 10px 0 10px;
+}
+
+/* Highlight active form field */
+
+#respond input[type="text"],
+textarea {
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  -o-transition: all 0.3s ease-in-out;
+  outline: none;
+  padding: 3px 0px 3px 3px;
+  margin: 5px 1px 3px 0px;
+  border: 1px solid #dddddd;
+}
+
+#respond input[type="text"]:focus,
+input[type="email"]:focus,
+input[type="url"]:focus,
+textarea:focus {
+  box-shadow: 0 0 5px rgba(81, 203, 238, 1);
+  margin: 5px 1px 3px 0px;
+  border: 2px solid rgba(81, 203, 238, 1);
+}
+
+#respond .comment-form-email,
+#respond .comment-form-url,
+#respond .comment-notes,
+#respond .comment-form-cookies-consent,
+#respond .comment-form-author {
+  display: none;
 }
