Adds code challenges to front-page
Adds a code challenge section to the front-page and also makes all badge images redirect to their respective post.

--- a/coding-on-country/app/public/wp-content/themes/myTheme/css/main.css
+++ b/coding-on-country/app/public/wp-content/themes/myTheme/css/main.css
@@ -172,3 +172,10 @@ textarea:focus {
 #respond .comment-form-author {
   display: none;
 }
+
+/*
+* Star rating for quests/challenges
+*/
+.checked {
+  color: orange;
+}
